# eduPIC

./: README.md
C/: README.md  eduPIC.cc
Cpp/: README.md  eduPIC.cpp
Rust/: Cargo.toml  README.md
Rust/src/: main.rs
