[package]
name = "edupic"
version = "1.0.0"
authors = ["Donko Z."]
edition = "2018"

[profile.release]
opt-level = 2
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
rand_distr = "0.2.2"
bincode = "1.3.2"
serde = { version ="1.0.124", features = ["derive"] }
